Numerous syncing fixes

--- a/src/main/java/com/zenplanner/sql/FormMain.form
+++ b/src/main/java/com/zenplanner/sql/FormMain.form
@@ -183,14 +183,14 @@
       </vspacer>
       <component id="e1e2e" class="javax.swing.JProgressBar" binding="pbMain">
         <constraints>
-          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
       <component id="655d7" class="javax.swing.JButton" binding="btnGo">
         <constraints>
-          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="20" left="100" bottom="20" right="100" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -221,7 +221,7 @@
       </component>
       <vspacer id="b0764">
         <constraints>
-          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
       </vspacer>
@@ -275,6 +275,24 @@
         <properties>
           <text value=""/>
         </properties>
+      </component>
+      <component id="de390" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Ignore Tables"/>
+        </properties>
+      </component>
+      <component id="3f118" class="javax.swing.JTextArea" binding="tbIgnore">
+        <constraints>
+          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
