Improved progress bar

--- a/src/main/java/com/zenplanner/sql/FormMain.form
+++ b/src/main/java/com/zenplanner/sql/FormMain.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.zenplanner.sql.FormMain">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="446" height="420"/>
+      <xy x="20" y="20" width="446" height="439"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -183,14 +183,14 @@
       </vspacer>
       <component id="e1e2e" class="javax.swing.JProgressBar" binding="pbMain">
         <constraints>
-          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
       <component id="655d7" class="javax.swing.JButton" binding="btnGo">
         <constraints>
-          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="20" left="100" bottom="20" right="100" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -293,6 +293,42 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
+      </component>
+      <component id="f9ab4" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Current table"/>
+        </properties>
+      </component>
+      <component id="e3503" class="javax.swing.JLabel" binding="lblCurrentTable">
+        <constraints>
+          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="None"/>
+        </properties>
+      </component>
+      <component id="e4562" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="18" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Current row"/>
+        </properties>
+      </component>
+      <component id="48495" class="javax.swing.JLabel" binding="lblCurrentRow">
+        <constraints>
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="None"/>
+        </properties>
       </component>
     </children>
   </grid>
